Fixed z-index issue with activities page and mobile menu

--- a/scss/_activities.scss
+++ b/scss/_activities.scss
@@ -8,7 +8,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         position: relative;
-        z-index: 1000;
+        z-index: 50;
 
         @include tablet-and-up {
             margin-top: -28px;
